# ml-data-projects

./: README.md
1_femto_gpt/: .gitignore  Makefile  README.md  gpt-dev.ipynb  pyproject.toml
