[tool.poetry]
name = "femto-gpt"
version = "0.1.0"
description = ""
authors = ["Viswadeep Sarangi <viswadeep.sarangi@gmail.com>"]
readme = "README.md"
packages = [{include = "femto_gpt"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
